Fix spacing.

--- a/src/_assets/css/_showcase.scss
+++ b/src/_assets/css/_showcase.scss
@@ -418,7 +418,7 @@
       }
 
       .cta {
-        margin-top: 20px;
+        margin-top: 60px;
       }
     }
   }
@@ -436,6 +436,12 @@
 
     &__cta {
       margin: 0 auto 20px;
+    }
+
+    // overrides
+    .card-body {
+      padding-bottom: 0;
+      padding-top: 0;
     }
 
     @include media-breakpoint-up(md) {
